Gutter's colors no longer bleed into game stats table

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -3,7 +3,7 @@ $break-med: 600px;
 body {
     font-family: 'Helvetica';
     margin: 0 auto;
-    background-color: #182027;
+    background-color: rgb(226, 226, 226);
     // overflow-x: hidden;
     height: 100vh;
 
