--- a/src/components/nba_stats/team_score/team_score.scss
+++ b/src/components/nba_stats/team_score/team_score.scss
@@ -7,7 +7,6 @@ $teamFont: 'Archivo Black', sans-serif;
 #team-score{
         font-family: $scoreFont;
         background-color: whitesmoke;
-        margin-top: 10px;
         width: 100%;
         padding: 10px;
 
